# testbed-orch

./: .env.example  .gitignore  .prettierrc  Makefile  Readme.md  docker-compose.yml
asset-manager/: Dockerfile  pyproject.toml
asset-manager/src/asset_manager/: db.py  server.py
asset-manager/tests/integration/: test_asset_manager.py
asset-manager/tests/unit/: test_db.py
device-adapter/: pyproject.toml
docs/: runbook.md
docs/adr/: 001-architecture.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: asset-manager-stack.ts  test-manager-stack.ts  testbed-stack.ts
infra/test/: asset-manager-stack.test.ts  testbed.test.ts
localstack/init/ready.d/: 01_create_tables.sh  easier_way_to_test.md  how_to_avoid_the_mess.md
proto/: asset_manager.proto
test-manager/: Dockerfile  pyproject.toml
test-manager/migrations/: 001_init.sql
test-manager/src/test_manager/: app.py  database.py  enqueue.py  metric.py  models.py  schemas.py  worker.py
